# AuraCal

./: .env.example  .gitignore  LICENSE  Project_Context.md  README.md  README_CN.md  todolist.md
.github/workflows/: deploy.yml
backend/: ai_providers.json  builtin_personas.json  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  chat_history.py  persona.py  user.py
backend/app/routers/: auth.py  breath.py  context.py  personas.py
backend/app/services/: ai_provider.py  prompt_engine.py
deploy/: auracal.service  nginx.conf  setup_server.sh
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  i18n.ts  index.css
frontend/src/components/: BreathingText.tsx  ClockWidget.tsx  ContextEditor.tsx  DanmakuLayer.tsx  LanguageToggle.tsx  PersonaManager.tsx  SettingsPanel.tsx  ThemeToggle.tsx  WordCloudLayer.tsx
frontend/src/data/: aiProviders.ts  builtinPersonas.ts
frontend/src/hooks/: useBreathing.ts
frontend/src/services/: aiProvider.ts  breathEngine.ts  promptEngine.ts
frontend/src/stores/: ambientStore.ts
